minor changes to gradle build